--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="img/1.jpg" alt="">
+            <img src="img/1.jpg" alt="Image of an Iphone 15">
         </div>
 
         <div class="contain-2">
